Organize Pieces class

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
    <head>
       <script src="js/utils.js"></script>
       <script src="js/keys.js"></script>
+      <script src="js/Piece.js"></script>
       <script src="js/game_engine.js"></script>
-      <script src="js/game.js"></script>
       <script src="js/main.js"></script>
       <script type="application/javascript">
          window.onload = function() {
