Reorganize draw square code

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <script src="js/utils.js"></script>
     <script src="js/keys.js"></script>
-    <script src="js/square.js"></script>
+    <script src="js/grid.js"></script>
     <script src="js/piece.js"></script>
     <script src="js/game_engine.js"></script>
     <script type="application/javascript">
