--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="index.css">
     <script src="js/utils.js"></script>
     <script src="js/keys.js"></script>
     <script src="js/tetrominos.js"></script>
@@ -8,19 +9,25 @@
     <script src="js/grid.js"></script>
     <script src="js/game_engine.js"></script>
     <script type="application/javascript">
-      window.onload = function() {
+      window.onload = async function() {
         Keys.addKeyListeners();
 
-        var canvas = document.getElementById("myCanvas");
+        var canvas = document.getElementById("GameCanvas");
+        var gameOver = document.getElementById("GameOver");
 
         var engine = new GameEngine(canvas, 30);
         engine.setupInput();
-        engine.run();
+        await engine.run();
+        gameOver.style.visibility = "visible";
       }
     </script>
   </head>
-  <body style="margin:0px; overflow: hidden; background-color: black;">
-  <canvas id="myCanvas" width="720" height="1280" style="width: 100%; height: 100%;">Your browser does not support the HTML5 canvas tag.</canvas>
+  <body>
+  <canvas id="GameCanvas" width="720" height="1280">Your browser does not support the HTML5 canvas tag.</canvas>
+  <div id="GameOver">
+    <p>Game Over</p>
+    <p>Refresh Page to Restart</p>
+  </div>
 
 
   </body>
